# simple-os-sim

./: README.md  main.py  pyproject.toml  requirements.txt
src/simple_os/: __init__.py  cpu.py  simulation_utils.py
src/simple_os/files/: disk.py  file.py  input_reader.py  manager.py  system.py
src/simple_os/memory/: Memory.py  MemoryManager.py  memory.py  memory_manager.py
src/simple_os/process/: dispatcher.py  pcb.py  process_manager.py  scheduler.py
src/simple_os/resource/: ResourceManager.py  resource_manager.py
t/: p_interrpt.txt  p_io.txt  p_mem_block.txt  p_prios.txt  p_prios_rr.txt
testes/: test_resource_manager.py
