[project]
name = "simple-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "artistrea", email = "apiravesi@gmail.com" }
]
dependencies = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[project.scripts]
simple-os = "simple_os:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
